--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
       <div class="logo-lateral">
         <img
-          src="prisma-ai/capturar-removebg-preview.png"
+          src="capturar-removebg-preview.png"
           alt="Logo Prisma"
           style="
             width: 48px;
@@ -263,7 +263,7 @@
           "
         >
           <img
-            src="prisma-ai/capturar-removebg-preview.png"
+            src="capturar-removebg-preview.png"
             alt="Logo Prisma Expandida"
             id="logoExpandida"
             style="
@@ -629,6 +629,30 @@
             >
           </div>
         </div>
+        <label
+          for="descricaoSobreMim"
+          style="
+            margin-top: 18px;
+            display: block;
+            font-weight: 600;
+            color: #111827;
+          "
+          >Sobre você</label
+        >
+        <textarea
+          id="descricaoSobreMim"
+          name="descricaoSobreMim"
+          rows="4"
+          placeholder="Conte um pouco sobre você, seus objetivos, interesses ou experiências relevantes..."
+          style="
+            width: 100%;
+            border-radius: 8px;
+            border: 1px solid #d1d5db;
+            padding: 12px;
+            font-size: 1rem;
+            margin-bottom: 18px;
+          "
+        ></textarea>
       </section>
 
       <!-- Página Perfil -->
