--- a/empresa.html
+++ b/empresa.html
@@ -143,7 +143,7 @@
       </div>
       <div class="logo-lateral">
         <img
-          src="capturar-removebg-preview.png"
+          src="./capturar-removebg-preview.png"
           alt="Logo Prisma"
           style="
             width: 48px;
@@ -190,7 +190,7 @@
           "
         >
           <img
-            src="capturar-removebg-preview.png"
+            src="./capturar-removebg-preview.png"
             alt="Logo Prisma Expandida"
             id="logoExpandida"
             style="
